methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:6: error: ';' expected but '{' found.
  }} while (vuBiscuit==false && nbPas<6) {
                                         ^