methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  var nbPas=0
  do {if(estSurBiscuit) {
    vuBiscuit=true
  }} while (vuBiscuit==false && nbPas<6) {
    avance()
    nbPas=nbPas+1
  }
  for(i <- 1 to nbPas) {
    recule()
  }
  return(vuBiscuit)
}

while(!haveBaggle()) {
  haveBaggle()
  droite()
  avance()
  gauche()
}